--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -15,8 +15,8 @@ main:
  # - title: "Talks"
  #   url: /talks/    
 
-  - title: "Teaching"
-    url: /teaching/    
+  - title: "MA Thesis"
+    url: /teaching_md/    
     
  # - title: "Portfolio"
  #   url: /portfolio/
