--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -16,7 +16,7 @@ main:
  #   url: /talks/    
 
   - title: "MA Thesis"
-    url: /teaching_md/    
+    url: /thesis/    
     
  # - title: "Portfolio"
  #   url: /portfolio/
