--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -21,8 +21,8 @@ main:
  # - title: "Portfolio"
  #   url: /portfolio/
         
-  - title: "Blog Posts"
-    url: /year-archive/
+  - title: "Policy Work"
+    url: /policy/
     
   - title: "CV"
     url: /cv/
