--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -10,7 +10,7 @@ main:
     url: /wp/
 
   - title: "Publications"
-    url: /teaching_md/
+    url: /publications_md/
 
  # - title: "Talks"
  #   url: /talks/    
